Add Ctrl-q as quit binding; it seems default and was unused.

--- a/sandy.1
+++ b/sandy.1
@@ -133,7 +133,7 @@ Set mark in current position.
 Go to mark. Prepend with Ctrl\-g to select to mark.
 .SS File operations
 .TP
-.B Meta\-q
+.B Ctrl-q or Meta\-q
 Quit if the file has not been modified.
 .TP
 .B Meta\-Shift\-q
