Add Ctrl-o binding, solved bug when saving an unmodified file

--- a/sandy.1
+++ b/sandy.1
@@ -101,6 +101,9 @@ Select full file.
 .B Ctrl\-g
 Cancel selection, or start selecting text manually.
 .TP
+.B Ctrl\-o
+Move to the opposite size of the selection, usually to change it.
+.TP
 .B Meta\-i
 Toggle case (in)sensitive search.
 .SS Deleting
