--- a/sandy.1
+++ b/sandy.1
@@ -3,7 +3,7 @@
 sandy \- simple ncurses text editor
 .SH SYNOPSIS
 .B sandy
-.RB [ \-hru ]
+.RB [ \-hrS ]
 .RB [ \-t\ tabstop ]
 .RB [ \-s\ syntax ]
 .RB [File | -]
@@ -20,16 +20,16 @@ Opens the selected file read-only.
 .B \-s syntax
 Manually choose the syntax colors.
 .TP
+.B \-S
+Use no syntax colors at all.
+.TP
 .B \-t tabstop
 Use selected tabstop in characters.
-.TP
-.B \-u
-Reverse UTF-8 behavior. UTF-8 processing is on by default.
 .TP
 .B \-v
 Prints version information to standard output, then exits.
 .SH USAGE
-The default key-bindings try to stick to the "emacs-mode" present in modern shells (specifically mksh(1)), which actually differs a bit from what emacs(1) does. External input is handled using dmenu(1) if the DISPLAY environment variable is set, read using sh(1) otherwise. Similarly, X11 clipboard interaction occurs through xsel(1) if DISPLAY is set, using a hidden file in the HOME directory otherwise.
+The default key-bindings try to stick to the "emacs-mode" present in modern shells (specifically mksh(1)), ignoring binding chains and replacing or removing all meta bindings. External input is handled using dmenu(1) if the DISPLAY environment variable is set, read using sh(1) otherwise. Similarly, X11 clipboard interaction occurs through xsel(1) if DISPLAY is set, using a hidden file in the HOME directory otherwise.
 .SS Cursor movement
 Cursor movement bindings can also be used to select text by pressing Ctrl\-g to start a selection (see below)
 .TP
@@ -45,67 +45,46 @@ Move cursor to next line.
 .B Ctrl\-p or Up
 Move cursor to previous line.
 .TP
-.B Meta\-f or Shift\-Right
+.B Shift\-Right
 Move cursor to the end of this or next word.
 .TP
-.B Meta\-b or Shift\-Left
+.B Shift\-Left
 Move cursor to the start of this or previous word.
 .TP
 .B Ctrl\-a or Home
-Move cursor to the beginning of the current line.
+Move cursor to the beginning of the current line or, if already there, one full screen up.
 .TP
 .B Ctrl\-e or End
-Move cursor to the end of the current line.
+Move cursor to the end of the current line or, if already there, one full screen down.
 .TP
-.B Meta\-, or Prev
+.B Prev
 Move cursor one full screen up.
 .TP
-.B Meta\-. or Next
+.B Next
 Move cursor one full screen down.
 .TP
-.B Meta\-< or Shift-Home
+.B Shift-Home
 Move cursor to the beginning of the file.
 .TP
-.B Meta\-> or Shift-End
+.B Shift-End
 Move cursor to the end of the file.
-.TP
-.B Meta\-g
-Prompt for a line number and go there.
 .SS Finding and selecting
 Text is searched and selected using POSIX regular expressions
 .TP
 .B Ctrl\-s
-Prompt for a search regex forward.
-.TP
-.B Meta\-s
-Search forward using the (first line of the) current selection as a regex.
+Prompt for a search regex forward or, if text is already selected, repeat last search forward.
 .TP
 .B Ctrl\-r
-Prompt for a search regex backwards.
+Prompt for a search regex backwards or, if text is already selected, repeat last search backwards.
 .TP
-.B Meta\-r
-Search backwards using the (first line of the) current selection as a regex.
-.TP
-.B Meta\-n
-Find next occurrence of last search forward.
-.TP
-.B Meta\-p
-Find next occurrence of last search backwards.
-.TP
-.B Ctrl\-x
+.B Ctrl\-]
 Extend selection to word, line, or full file from current.
-.TP
-.B Meta\-x
-Select full file.
 .TP
 .B Ctrl\-g
 Cancel selection, or start selecting text manually.
 .TP
 .B Ctrl\-o
-Move to the opposite size of the selection, usually to change it.
-.TP
-.B Meta\-i
-Toggle case (in)sensitive search.
+Move to the opposite size of the selection, usually to change it (move to the mark if no selection).
 .SS Deleting
 If any text is selected, any of these bindings deletes it and, unless Backspace or Delete, moves it to the clipboard. Otherwise they behave as per this text. In read-only mode, these bindings select text instead.
 .TP
@@ -124,29 +103,23 @@ Delete to end of line or join with next line.
 .B Ctrl\-w
 Delete to beginning of word or previous word.
 .TP
-.B Meta\-d
+.B Ctrl\-c
 Delete to end of word or next word.
 .SS Mark
 The mark is a single fixed position in the file that can be used as bookmark.
 .TP
-.B Meta\-Space
+.B Ctrl\-Space or Ctrl\-\@
 Set mark in current position.
 .TP
-.B Ctrl\-` or Ctrl\-Space
-Go to mark. Prepend with Ctrl\-g to select to mark.
+.B Ctrl\-o
+Go to mark (unless there is a selection). Prepend with Ctrl\-g to select to mark.
 .SS File operations
 .TP
-.B Ctrl-q or Meta\-q
-Quit if the file has not been modified.
+.B Ctrl-q
+Quit if the file has not been modified. Repeat to force quit.
 .TP
-.B Meta\-Shift\-q
-Quit unconditionally.
-.TP
-.B Meta\-w
-Write changes to disk.
-.TP
-.B Meta\-Shift\-w
-Prompt for a different filename to save the file as.
+.B Ctrl\-x
+Write changes to disk or quit if unmodified.
 .SS Text operations
 These operations affect the selected text if any.
 .TP
@@ -156,7 +129,7 @@ Prompt for a command to pipe text through.
 .B Ctrl\-y or Shift-Insert
 Replace (paste, yank) with text from the clipboard.
 .TP
-.B Ctrl\-c or Insert
+.B Ctrl\-t or Insert
 Copy to the clipboard.
 .TP
 .B Shift-Delete
@@ -164,16 +137,16 @@ Copy to the clipboard and delete.
 .SS Other
 .TP
 .B Ctrl\-l
-Center screen in current line.
+Center screen in current line, refresh.
 .TP
 .B Ctrl\-v
 Insert next character as-is.
 .TP
-.B Meta\-Shift\-r
-Toggle read-only status for file.
+.B Ctrl\-z
+Suspend editor to the shell.
 .TP
-.B Meta\-Shift\-s
-Prompt for a file syntax to use.
+.B Ctrl\-\[ or Escape
+Prompt for a command or line number to go to.
 .SH SEE ALSO
 .BR dmenu(1)
 .BR xsel(1)
