--- a/sandy.1
+++ b/sandy.1
@@ -8,18 +8,18 @@ sandy \- simple ncurses text editor
 .IR tabstop ]
 .RB [ \-s
 .IR syntax ]
-.RI [ file |-]
+.RI [ file |\-]
 .SH DESCRIPTION
 sandy is a simple ncurses text editor.  It loads and saves files and lets you
-perform basic editing and pipe the selection through arbitrary commands.  A small
-degree of external control can be achieved by writing to a named pipe.
+perform basic editing and pipe the selection through arbitrary commands.
+A small degree of external control can be achieved by writing to a named pipe.
 .SH OPTIONS
 .TP
 .B \-h
 Prints usage information to stdout, then exits.
 .TP
 .B \-r
-Opens the selected file read-only.
+Opens the selected file read\-only.
 .TP
 .BI \-s " syntax"
 Manually choose the syntax colors.
@@ -33,7 +33,7 @@ Use selected tabstop in characters.
 .B \-v
 Prints version information to stdout, then exits.
 .SH USAGE
-The default key-bindings try to stick to the "emacs-mode" present in modern
+The default key\-bindings try to stick to the "emacs\-mode" present in modern
 shells (specifically
 .IR mksh (1)),
 which actually differs a bit from what
@@ -62,18 +62,18 @@ Move cursor to next line.
 Move cursor to previous line.
 .TP
 .BR Shift\-Right
-Move cursor to the end of this " or " next word.
+Move cursor to the end of this or next word.
 .TP
 .BR Shift\-Left
-Move cursor to the start of this " or " previous word.
+Move cursor to the start of this or previous word.
 .TP
 .BR Ctrl\-a " or " Home
-Move cursor to the beginning of the current line " or " if already there, one
-full screen up.
+Move cursor to the beginning of the current line or if already there, one full
+screen up.
 .TP
 .BR Ctrl\-e " or " End
-Move cursor to the end of the current line " or " if alredy there, one full
-screen down.
+Move cursor to the end of the current line or if alredy there, one full screen
+down.
 .TP
 .BR Prev
 Move cursor one full screen up.
@@ -81,20 +81,20 @@ Move cursor one full screen up.
 .BR Next
 Move cursor one full screen down.
 .TP
-.BR Shift-Home
+.BR Shift\-Home
 Move cursor to the beginning of the file.
 .TP
-.BR Shift-End
+.BR Shift\-End
 Move cursor to the end of the file.
 .SS Finding and selecting
 Text is searched and selected using POSIX regular expressions
 .TP
 .B Ctrl\-s
-Prompt for a search regex forward " or " if there is a selection, repeat
-search forward.
+Prompt for a search regex forward or if there is a selection, repeat search
+forward.
 .TP
 .B Ctrl\-r
-Prompt for a search regex backwards " or " if there is a selection, repeat
+Prompt for a search regex backwards or if there is a selection, repeat
 search backwards.
 .TP
 .B Ctrl\-\]
@@ -104,12 +104,12 @@ Extend selection to word, line, or full file from current.
 Cancel selection, or start selecting text manually.
 .TP
 .B Ctrl\-o
-Move to the opposite size of the selection, usually to change it " or " if
-there is no selection, move to mark.
+Move to the opposite size of the selection, usually to change it or if there is
+no selection, move to mark.
 .SS Deleting
 If any text is selected, any of these bindings deletes it and, unless Backspace
 or Delete, moves it to the clipboard.  Otherwise they behave as per this text.
-In read-only mode, these bindings select text instead.
+In read\-only mode, these bindings select text instead.
 .TP
 .BR Ctrl\-d " or " Delete
 Delete next character.
@@ -131,31 +131,31 @@ Delete to end of word or next word.
 .SS Mark
 The mark is a single fixed position in the file that can be used as bookmark.
 .TP
-.B Ctrl\-Space " or " Ctrl\-`
+.BR Ctrl\-Space " or " Ctrl\-`
 Set mark in current position.
 .TP
 .BR Ctrl\-o
 Go to mark unless there is a selection.  Prepend with Ctrl\-g to select to mark.
 .SS File operations
 .TP
-.BR Ctrl-q
+.BR Ctrl\-q
 Quit if the file has not been modified. Repeat to quit unconditionally.
 .TP
 .B Ctrl\-x
-Write changes to disk " or " quit if the file is not modified.
+Write changes to disk or quit if the file is not modified.
 .SS Text operations
 These operations affect the selected text if any.
 .TP
 .B Ctrl\-\\
 Prompt for a command to pipe text through.
 .TP
-.BR Ctrl\-y " or " Shift-Insert
+.BR Ctrl\-y " or " Shift\-Insert
 Replace (paste, yank) with text from the clipboard.
 .TP
 .BR Ctrl\-t " or " Insert
 Copy to the clipboard.
 .TP
-.B Shift-Delete
+.B Shift\-Delete
 Copy to the clipboard and delete.
 .SS Other
 .TP
@@ -163,12 +163,12 @@ Copy to the clipboard and delete.
 Center screen in current line, refresh.
 .TP
 .B Ctrl\-v
-Insert next character as-is.
+Insert next character as\-is.
 .TP
 .B Ctrl\-z
 Suspend editor to shell.
 .TP
-.B Ctrl\-\[ " or " Esc
+.BR Ctrl\-[ " or " Esc
 Prompt for command.
 .SH SEE ALSO
 .IR dmenu (1),
