--- a/README
+++ b/README
@@ -25,13 +25,13 @@ Running sandy
 -------------
 Use the following syntax:
 
-	sandy [-r] [-u] [-t TABSTOP] [-s SYNTAX] [File]
+	sandy [-r] [-S | -s SYNTAX] [-t TABSTOP] [File]
 
 Where:
 -r opens the file read-only
--u reverses the default UTF-8 behavior
--t TABSTOP sets the tabstop for this instance of sandy
+-S use no syntax colors at all.
 -s SYNTAX  lets you specify the syntax colors for this file
+-t TABSTOP sets the tabstop for this instance of sandy
 
 
 Name
