--- a/sandy.1
+++ b/sandy.1
@@ -146,7 +146,7 @@ Write changes to disk or quit if the file is not modified.
 .SS Text operations
 These operations affect the selected text if any.
 .TP
-.B Ctrl\-\\
+.B Ctrl\-\e
 Prompt for a command to pipe text through.
 .TP
 .BR Ctrl\-y " or " Shift\-Insert
