Write interface to stderr, simplify warning.

--- a/sandy.1
+++ b/sandy.1
@@ -16,7 +16,7 @@ A small degree of external control can be achieved by writing to a named pipe.
 .SH OPTIONS
 .TP
 .B \-h
-Prints usage information to stdout, then exits.
+Prints usage information to stderr, then exits.
 .TP
 .B \-r
 Opens the selected file read\-only.
@@ -31,7 +31,7 @@ Use no syntax colors at all.
 Use selected tabstop in characters.
 .TP
 .B \-v
-Prints version information to stdout, then exits.
+Prints version information to stderr, then exits.
 .SH USAGE
 The default key\-bindings try to stick to the "emacs\-mode" present in modern
 shells (specifically
