--- a/sandy.1
+++ b/sandy.1
@@ -188,7 +188,7 @@ other way.
 .B Ctrl\-z
 Suspend editor to shell.
 .TP
-.BR Ctrl\-[ " or " Esc
+.BR Meta\-x " or " Ctrl\-[ " or " Esc
 Prompt for command.
 .SH SEE ALSO
 .IR dmenu (1),
