--- a/README
+++ b/README
@@ -28,6 +28,7 @@ Use the following syntax:
 	sandy [-r] [-S | -s SYNTAX] [-t TABSTOP] [File]
 
 Where:
+-a starts with autoindent
 -r opens the file read-only
 -S use no syntax colors at all.
 -s SYNTAX  lets you specify the syntax colors for this file
