Return original f_extsel() behavior.

--- a/sandy.1
+++ b/sandy.1
@@ -120,7 +120,7 @@ search backwards.
 Repeat search backwards.
 .TP
 .B Ctrl\-\]
-Extend selection to line, or full file from current.
+Extend selection to word, line or full file from current.
 .TP
 .B Ctrl\-g
 Cancel current selection.
