More consistent behavior for ^H and ^D. Also, some teminals generate ^H on backspace, which was annoying.

--- a/sandy.1
+++ b/sandy.1
@@ -130,11 +130,11 @@ Move to the opposite size of the selection, usually to modify it.
 .SS Deleting
 Unlike in most other text editors, inserting text while a selection is active does not delete its content.
 .TP
-.BR Ctrl\-d " or " Delete
+.BR Ctrl\-d
 Kill the current selection and put it in the clipboard. If there is no selection, delete next character.
 .TP
-.BR Ctrl\-h " or " Shift\-Delete
-Delete the current selection if any. Otherwise delete previous character.
+.BR Delete " or " Shift\-Delete
+Delete the current selection if any. Otherwise delete next character.
 .TP
 .BR Backspace
 Delete previous character.
