Little manpage update.

--- a/sandy.1
+++ b/sandy.1
@@ -13,7 +13,9 @@ sandy \- simple ncurses text editor
 sandy is a simple modeless ncurses text editor.  It loads and saves files and
 lets you perform basic editing and pipe the selection through arbitrary
 commands.  A small degree of external control can be achieved by writing to a
-named pipe.
+named pipe.  Sandy can also capture text from the standard input and edit it
+instead of a file as well as dump the buffer to the standard output instead of
+writing it to a file.
 .SH OPTIONS
 .TP
 .B \-a
