--- a/sandy.1
+++ b/sandy.1
@@ -161,7 +161,7 @@ Delete to end of word or next word.
 Quit if the file has not been modified.  Repeat to quit unconditionally.
 .TP
 .B Ctrl\-x
-Write changes to disk or quit if the file is not modified.
+Quit if the file is not modified. Otherwise write changes to disk.
 .SS Text operations
 These operations affect the selected text if any.
 .TP
@@ -187,12 +187,12 @@ Lowercase selection.
 Uppercase selection.
 .TP
 .BR Ctrl\-y " or " Shift\-Insert
-Replace (paste, yank) with text from the clipboard.
+Add (paste, yank) text from the clipboard.
 .TP
 .BR Ctrl\-t " or " Insert
 Copy to the clipboard.
 .TP
-.BR (Again) Ctrl\-d " or " Chift\-Delete
+.BR (Again) Ctrl\-d " or " Shift\-Delete
 If there is any selection, cut to the clipboard.
 .SS Other
 .TP
