Undo & redo man page entries by Wolfgang Corcoran-Mathe

--- a/sandy.1
+++ b/sandy.1
@@ -203,6 +203,12 @@ Center screen in current line, refresh.
 Insert next character as\-is.  This is modal and sucks, but there simply was no
 other way.
 .TP
+.B Ctrl\-_
+Undo the last action.
+.TP
+.B Ctrl\-^
+Redo or repeat the previous action.
+.TP
 .B Ctrl\-z
 Suspend editor to shell.
 .TP
