fix mouse scroll down
- add a comment in the README how to enable mouse scrolling. This is a
  limitation in ncurses.
- read count can be 0 (not an error), this is reproducable if you scroll
  down with the mouse with ncurses and --disable-mouse-ext.

--- a/README
+++ b/README
@@ -40,3 +40,7 @@ Name
 In case you are wondering, sandy was the smartest pet ferret. She died of
 cancer though. We were sad and started coding this editor.
 
+
+Known issues
+------------
+Mouse scroll down works if ncurses is compiled with --enable-ext-mouse.
